--- a/src/screens/sales/Styles.module.css
+++ b/src/screens/sales/Styles.module.css
@@ -1,13 +1,13 @@
 /* ALIGNS */
 .center {
     align-items: center;
-    margin-top: 1em;
+    /* margin-top: 1em; */
     text-align: center;
 }
 
 .right {
     align-items: end;
-    margin-top: 1em;
+    /* margin-top: 1em; */
     text-align: end;
 }
 
