--- a/src/screens/sales/Styles.module.css
+++ b/src/screens/sales/Styles.module.css
@@ -11,6 +11,12 @@
     text-align: end;
 }
 
+.left {
+    align-items: flex-start;
+    /* margin-top: 1em; */
+    text-align: left;
+}
+
 /* MARGINS */
 .margin1 {
     margin: 1em;
